syntax = "proto3";

package users;

option go_package = "github.com/Hinsane5/hoshiBmaTchi/backend/proto/users";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message RegisterUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message RegisterUserResponse {
  string user_id = 1;
  string message = 2;
}